[GStreamer] human readable language code for tracks https://bugs.webkit.org/show_bug.cgi?id=124514

Reviewed by Martin Robinson.

.:

* Source/autotools/FindDependencies.m4: Add gstreamer-tag-1.0.
* Source/cmake/FindGStreamer.cmake: Same.
* Source/cmake/OptionsEfl.cmake: Same.
* Source/cmake/OptionsGTK.cmake: Same.

Source/WebCore:

* PlatformEfl.cmake: Add GSTREAMER_TAG_INCLUDE_DIRS and GSTREAMER_TAG_LIBRARIES.
* PlatformGTK.cmake: Same.
* platform/graphics/gstreamer/TrackPrivateBaseGStreamer.cpp:
(WebCore::TrackPrivateBaseGStreamer::getLanguageCode): Run language codes though gst_tag_get_language_code_iso_639_1() to make sure they're valid.
(WebCore::TrackPrivateBaseGStreamer::notifyTrackOfTagsChanged): Use getLanguageCode() for languages instead of just getTag().


Canonical link: https://commits.webkit.org/148344@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165763 268f45cc-cd09-0410-ab3c-d52691b4dbfc