Source/cmake/OptionsGTK.cmake
@@ -150,11 +150,18 @@ add_definitions(-DUSER_AGENT_GTK_MINOR_VERSION=30)
 add_definitions(-DWEBKITGTK_API_VERSION_STRING="${WEBKITGTK_API_VERSION}")
 
 if (ENABLE_VIDEO OR ENABLE_WEB_AUDIO)
+    set(GSTREAMER_COMPONENTS app pbutils)
     add_definitions(-DWTF_USE_GSTREAMER)
-endif ()
+    if (ENABLE_VIDEO)
+        list(APPEND GSTREAMER_COMPONENTS video tag)
+    endif ()
 
-if (ENABLE_WEB_AUDIO)
-    add_definitions(-DWTF_USE_WEBAUDIO_GSTREAMER)
+    if (ENABLE_WEB_AUDIO)
+        list(APPEND GSTREAMER_COMPONENTS audio fft)
+        add_definitions(-DWTF_USE_WEBAUDIO_GSTREAMER)
+    endif ()
+
+    find_package(GStreamer 1.0.3 REQUIRED COMPONENTS ${GSTREAMER_COMPONENTS})
 endif ()
 
 # FIXME: These need to be configurable.
@@ -179,7 +186,6 @@ find_package(ZLIB REQUIRED)
 find_package(Xt REQUIRED)
 find_package(ATK REQUIRED)
 find_package(WebP REQUIRED)
-find_package(GStreamer 1.0.3 REQUIRED COMPONENTS ${GSTREAMER_COMPONENTS})
 find_package(ATSPI 2.5.3)
 find_package(GObjectIntrospection)
 
